[gd_scene load_steps=3 format=3 uid="uid://cga2n8l4ugvsa"]

[ext_resource type="Script" path="res://Scripts/GameCard.gd" id="1_kfoe5"]
[ext_resource type="PackedScene" uid="uid://d4kps677l7g5s" path="res://Scenes/card.tscn" id="2_qo1tg"]

[node name="GameCard" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kfoe5")

[node name="EnemyHand" type="Node" parent="."]

[node name="EnemyCraturesBoard" type="Node" parent="."]

[node name="Card1_EnemyC" parent="EnemyCraturesBoard" instance=ExtResource("2_qo1tg")]
offset_left = 500.0
offset_top = 50.0
offset_right = -708.0
offset_bottom = 50.0

[node name="PlayerHand" type="Node" parent="."]

[node name="PlayerCreaturesBoard" type="Node" parent="."]

[node name="Card1_PleyerC" parent="PlayerCreaturesBoard" instance=ExtResource("2_qo1tg")]
offset_left = 1200.0
offset_top = 500.0
offset_right = -8.0
offset_bottom = 500.0

[editable path="EnemyCraturesBoard/Card1_EnemyC"]
[editable path="PlayerCreaturesBoard/Card1_PleyerC"]
